<resources>
    <string name="accept">Aceptar</string>
    <string name="add">Add</string>
    <string name="addExercise"> add exercise</string>
    <string name="addTarget">Add target</string>
    <string name="addWeight">Add weight</string>
    <string name="app_name">Gym Game Project!</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">96eeed49-5fa3-4b85-afef-b04eebd39165</string>
    <string name="back4app_client_key">xOmVoAaCV4ijV61xG1zVNSuISs9gw3tic52YT3Im</string>
    <string name="background">Background image</string>
    <string name="camera">Camera</string>
    <string name="cameraImgDes">icon of a camera</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category:</string>
    <string name="client_id">911533527631-em4u3kon7ad0h5if0up5vfulmu0o71rq.apps.googleusercontent.com</string>
    <string name="colon">:</string>
    <string name="description">Description:</string>
    <string name="dot">.</string>
    <string name="dottedButton">More options button</string>
    <string name="enter">Enter</string>
    <string name="events">Events:</string>
    <string name="exercises">Exercises</string>
    <string name="exerciseDescription">Image shown how the exercise is done</string>
    <string name="exerciseIconDes">Icon of the exercise</string>
    <string name="floatingDescButton">floating action button</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="fry">F</string>
    <string name="gallery">Gallery</string>
    <string name="galleryImgDes">icon of a gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="higherWeight">Higher weight lifted</string>
    <string name="kg"> Kg</string>
    <string name="muscles">Muscles:</string>
    <string name="modify">Modify</string>
    <string name="modifyData">Modify data</string>
    <string name="mon">M</string>
    <string name="name">Name</string>
    <string name="newPass">New Password</string>
    <string name="newsImgDes">Image not described</string>
    <string name="no">No</string>
    <string name="lastProgress">Last progress updated</string>
    <string name="lastWeight">Last weight inserted</string>
    <string name="oldPass">Old Password</string>
    <string name="overwrite">That routine already exist.\n Want to overwrite?</string>
    <string name="password">Password</string>
    <string name="price">Price:</string>
    <string name="progress">Progress:</string>
    <string name="refresh">Must refresh the screen when inserting data for the first time</string>
    <string name="remove">Remove</string>
    <string name="removeRecord">Remove selected record</string>
    <string name="removeReservation">Remove reservation</string>
    <string name="removeWeight">Remove weight</string>
    <string name="repetitions">Repetitions:</string>
    <string name="repetitionsAndSeries">Repetitions and series:</string>
    <string name="reserve">Reserve</string>
    <string name="routineImage">Routine Image</string>
    <string name="routineName">Routine name</string>
    <string name="sat">S</string>
    <string name="schedule">Schedule:</string>
    <string name="space">" "</string>
    <string name="sun">S</string>
    <string name="target">Target</string>
    <string name="teacher">Teacher:</string>
    <string name="tue">T</string>
    <string name="thu">T</string>
    <string name="time">Time</string>
    <string name="vacancies">Vacancies:</string>
    <string name="wed">W</string>
    <string name="weight">Weight:</string>
    <string name="x">x</string>
    <string name="yes">Yes</string>

    <string name="textNews">Hacer ejercicio es un paso importante para tener una vida saludable. Cuando te mueves, aceleras tu corazón y le ayudas a combatir la fatiga y el impulso de levantarte cada mañana. Es una manera eficaz de despertar tus músculos y calentar el cuerpo para el día que empieza. Por lo tanto, levántate temprano para activar tu cuerpo y que se te haga más fácil despertarte. No es necesario ir al gimnasio o realizar una sesión de entrenamiento, solo tienes que incluir en tu rutina ejercicios fáciles y rápidos que hagan que tu cuerpo esté activo durante todo el día.</string>
</resources>