<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/custom_bottom_sheet01">


    <EditText
        android:autofillHints=""
        android:id="@+id/name"
        android:maxLength="15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name" />
    <EditText
        android:autofillHints=""
        android:id="@+id/oldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/oldPass"/>
    <EditText
        android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/newPass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/accept"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/accept"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/darkGreen"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/darkGreen"/>
    </LinearLayout>
</LinearLayout>