<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivitiesDetailsFragment"
    style="@style/SCREEN">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activityImg"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:contentDescription="@string/background"
                android:src="@drawable/exercise_activity_r" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#252525"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#252525"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/activityDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#252525"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher"
                    android:textColor="#252525"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/activityTeacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#252525"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vacancies"
                    android:textColor="#252525"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/activityVacancies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#252525"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textColor="#252525"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/activitySchedules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#252525"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="#252525"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/activityPrices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#252525"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/monday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/mon"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tuesday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/tue"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/wednesday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/wed"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@id/thursday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/thu"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/friday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/fry"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/saturday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/sat"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/sunday"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:paddingStart="10dp"
                        android:text="@string/sun"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reserve"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:text="@string/reserve"
                    android:textAllCaps="false"
                    style="@style/BUTTON"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteReservation"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:text="@string/removeReservation"
                    android:textAllCaps="false"
                    style="@style/BUTTON"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>