<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".routines.RoutineCreationFragment"
    style="@style/SCREEN">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/editImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@color/white"
            android:contentDescription="@string/routineImage"
            android:src="@drawable/icon_camera" />

        <EditText
            android:id="@+id/routineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/routineName"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/daysName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <CheckBox
            android:id="@+id/thuesday"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/daysName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        style="@style/SCREEN"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days">

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textAlignment="center"
            style="@style/week"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textAlignment="center"
            style="@style/week"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textAlignment="center"
            style="@style/week"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textAlignment="center"
            style="@style/week"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/fry"
            android:textAlignment="center"
            style="@style/week"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textAlignment="center"
            style="@style/week"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textAlignment="center"
            style="@style/week"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:contentDescription="@string/floatingDescButton"
        app:layout_constraintTop_toBottomOf="@+id/daysName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="380dp"
        android:backgroundTint="@color/azulLogo"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/weights"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="5.sp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
        tools:listitem="@layout/item_exercise" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/accept"
            android:textStyle="bold"
            android:backgroundTint="@color/darkGreen"
            style="@style/BUTTON"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:textStyle="bold"
            style="@style/BUTTON"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>