<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="20dp"
    style="@style/SCREEN">

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/routineImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

        <TextView
            android:id="@+id/routineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/routineImage"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            style="@style/TEXT"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/routineImage"
            android:text="@string/mon"
            style="@style/week"/>
        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/monday"
            android:text="@string/tue"
            style="@style/week"/>
        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/tuesday"
            android:text="@string/wed"
            style="@style/week"/>
        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/wednesday"
            android:text="@string/thu"
            style="@style/week"/>
        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/thursday"
            android:text="@string/fry"
            style="@style/week"/>
        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/friday"
            android:text="@string/sat"
            style="@style/week"/>
        <TextView
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/saturday"
            android:text="@string/sun"
            style="@style/week"/>

        <ImageButton
            android:id="@+id/mas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/sunday"
            android:background="@color/white"
            android:contentDescription="@string/dottedButton"
            android:src="@drawable/mas" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>