<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".routines.RoutineDetailFragment"
    style="@style/SCREEN">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageButton
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@color/white"
            android:contentDescription="@string/dottedButton"
            android:src="@drawable/icon_camera" />

        <TextView
            android:id="@+id/routineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:text=""
            android:textColor="#121212"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/monday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/mon"
            style="@style/week"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/tue"
            style="@style/week"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/wed"
            style="@style/week"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@id/thursday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/thu"
            style="@style/week"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/friday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/fry"
            style="@style/week"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/saturday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/sat"
            style="@style/week"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/sunday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="10dp"
            android:text="@string/sun"
            style="@style/week"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="5.sp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/item_exercise" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:text="@string/modify"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="@style/BUTTON"/>
    </LinearLayout>
</RelativeLayout>